# WEB

./: .gitignore  LICENSE  README.md  data.json  db.sqlite3  dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: django.yml
courses/: models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_product_image.py  0003_coursetopic_product_why_this_course_and_more.py  0004_remove_product_course_topics_product_course_topics.py  0005_rename_course_topics_product_topics1_product_topics2_and_more.py  0006_product_case1_product_case2_product_case3_and_more.py  0007_product_name1_product_name2_product_name3_and_more.py  0008_product_youtube_link.py  0009_product_courses_image_alter_product_image.py  0010_remove_product_case1_remove_product_case2_and_more.py
courses/templates/courses/: android_ios.html  courses.html  detail.html  devops.html  javascript.html  python.html
kursova/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/static/main/: style.css
main/templates/main/: about.html  curriculum.html  index.html  instructors.html  layout.html  registration.html  (+1 more)
news/: forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_artiles_options.py  0003_artiles_author.py  0004_alter_artiles_title.py  0005_remove_artiles_anons.py
resource/: apps.py  forms.py  models.py  urls.py  views.py
resource/migrations/: 0001_initial.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+11 files in other folders)
